--- a/html5up-prologue/assets/css/main.css
+++ b/html5up-prologue/assets/css/main.css
@@ -6,7 +6,7 @@ body, html{
 	font-family: 'Quicksand', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
-	color: #5a5a5a;
+	color: #000;
 }
 /*
 	Prologue by HTML5 UP
@@ -259,36 +259,89 @@ body, html{
     z-index: 100;
 }
 
-/*modal box styling*/
-.modal-demo {
-    background-color: #FFF;
-    width: 600px;
-    border: #000 solid 1px;
-    border-radius: 10px;
-    box-shadow: 0 8px 6px -6px black;
-    text-align: left;
-    display: none;
+.hovereffect {
+	width:100%;
+	height:100%;
+	overflow:hidden;
+	position:relative;
+	text-align:center;
+	cursor:default;
 }
 
-.modal-demo .close{
-    position: absolute;
-    top: 15px;
-    right: 15px;
+.hovereffect .overlay {
+	width:100%;
+	height:100%;
+	position:absolute;
+	overflow:hidden;
+	top:0;
+	left:0;
+	opacity:0;
+	background-color:rgba(0,0,0,0.5);
+	-webkit-transition:all .4s ease-in-out;
+	transition:all .4s ease-in-out
 }
 
-.close span{
-	color:#333;
+.hovereffect img {
+	display:block;
+	position:relative;
+	-webkit-transition:all .4s linear;
+	transition:all .4s linear;
 }
 
-.modal-demo .title {
-    padding: 10px 20px 15px 20px;
-    line-height: 18px;
-    font-size: 18px;
-    border-bottom: #CCC solid 1px;
+.hovereffect p {
+	color:#fff;
+	text-align:center;
+	position:relative;
+	font-size:12px;
+	background:rgba(0,0,0,0.6);
+	-webkit-transform:translatey(-100px);
+	-ms-transform:translatey(-100px);
+	transform:translatey(-100px);
+	-webkit-transition:all .2s ease-in-out;
+	transition:all .2s ease-in-out;
+	padding:10px;
 }
 
-.modal-demo .text{
-	padding: 0 20px 20px 20px;
+.hovereffect a.info {
+	text-decoration: none;
+    display: block;
+    width: 150px;
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: #000;
+    filter: alpha(opacity=0);
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    padding: 3px;
+    margin: 5px auto 0;
+}
+
+.hovereffect a.info:hover {
+	box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+	-ms-transform:scale(1.2);
+	-webkit-transform:scale(1.2);
+	transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+	opacity:1;
+	filter:alpha(opacity=100);
+}
+
+.hovereffect:hover p, .hovereffect:hover a.info {
+	opacity:1;
+	filter:alpha(opacity=100);
+	-ms-transform:translatey(0);
+	-webkit-transform:translatey(0);
+	transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+	-webkit-transition-delay:.2s;
+	transition-delay:.2s;
 }
 
 .form-group >i {
@@ -1803,11 +1856,9 @@ body, html{
 
 	body {
 		background: #fff;
-		font-family: 'Merriweather', serif;
 		font-size: 14pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
 	}
 
 		body.is-loading * {
@@ -1831,7 +1882,7 @@ body, html{
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: #000;
 		line-height: 1.5em;
 	}
 
@@ -2339,7 +2390,7 @@ body, html{
 		margin-left: 375px;
 		text-align: center;
 		background-color: #dce3e2;
-		padding: 3em 0 4em 0;
+		padding: 1em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
 	}
