--- a/html5up-prologue/assets/css/main.css
+++ b/html5up-prologue/assets/css/main.css
@@ -8,11 +8,6 @@ body, html{
 	-webkit-font-smoothing: antialiased !important;
 	color: #000;
 }
-/*
-	Prologue by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 /* Reset */
 
@@ -2473,6 +2468,28 @@ body, html{
 
 			#main > section.four {
 				background-color: #e8edec;
+			}
+
+			#main >section.overview{
+				background-size: cover;
+    			background-repeat: no-repeat;
+    			height: 350px;
+			}
+
+			#main > section#rmanual{
+				background-image: url("../../images/rmanual/manual_cover.jpg");
+			}
+
+			#main > section#rportal{
+				background-image: url("../../images/rportal/portal_cover.jpg");
+			}
+
+			#main > section#rtumblr{
+				background-image: url("../../images/rtumblr/tumblr_cover.jpg");
+			}
+
+			#main > section#truth{
+				background-image: url("../../images/truth.jpg");
 			}
 
 /* Wide */
