--- a/html5up-prologue/assets/css/main.css
+++ b/html5up-prologue/assets/css/main.css
@@ -222,6 +222,10 @@ body, html{
     background-color: #5bc0de !important;
 }
 
+.timeline-badge.no-badge{
+	background-color: transparent !important;
+}
+
 .timeline-title {
     margin-top: 0;
     color: inherit;
@@ -253,6 +257,8 @@ body, html{
     font-weight: bold;
     z-index: 100;
 }
+
+ 
 
 .hovereffect {
 	width:100%;
@@ -341,6 +347,412 @@ body, html{
 
 .form-group >i {
     padding: 20px 0 0;
+}
+
+/*Pie chart styling*/
+/* -------------------------------------
+ * Bar container
+ * ------------------------------------- */
+.progress-radial {
+  display: inline-block;
+  margin-right: 30px;
+  position: relative;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.pie-title{
+    margin-top: 75px;
+    text-align: center;
+    line-height: 20px;
+}
+
+/* -------------------------------------
+ * Optional centered circle w/text
+ * ------------------------------------- */
+.progress-radial .overlay {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: #ecf1f1;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-top: 5px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  padding-top: 10px;
+}
+
+/* -------------------------------------
+ * Mixin for progress-% class
+ * ------------------------------------- */
+.progress-75 {
+  background-image: linear-gradient(0deg, #ff6347 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)), linear-gradient(270deg, #ff6347 50%, #c9c9c9 50%, #c9c9c9);
+}
+
+.progress-85 {
+  background-image: linear-gradient(36deg, #ff6347 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)), linear-gradient(270deg, #ff6347 50%, #c9c9c9 50%, #c9c9c9);
+}
+
+.progress-100 {
+  background-image: linear-gradient(90deg, #ff6347 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)), linear-gradient(270deg, #ff6347 50%, #c9c9c9 50%, #c9c9c9);
+}
+
+/*Skill set styling*/
+.skills-container {
+  margin-top: 20px;
+  text-align: left;
+}
+
+#lang-skill{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.skills {
+  width: 80%;
+  max-width: 960px;
+  height: 850px;
+  margin: auto;
+  position: relative;
+}
+
+.lines {
+  height: 100%;
+  position: relative;
+}
+
+.lines .line {
+  height: inherit;
+  width: 2px;
+  position: absolute;
+  background: #fafafa;
+}
+.lines .line.line0 {
+  left: 0;
+}
+.lines .line.line33 {
+  left: 30%;
+}
+.lines .line.line66 {
+  left: 60%;
+}
+
+.lines .line.line100 {
+  left: 100%;
+}
+
+.lines .line .lineLabel {
+  display: block;
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  right: -50px;
+}
+.lines .line .line-label.title {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.charts {
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  z-index: 10;
+}
+
+.chart {
+  margin: 30px 0 0;
+}
+.chart:first-child {
+  margin: 0;
+}
+
+.chart-title {
+  display: block;
+  margin: 0 0 10px;
+  font-weight: bold;
+  /*opacity: 0;*/
+  animation: 1s anim-lightspeed-in ease forwards;
+}
+
+.chart-horiz {
+  overflow: hidden;
+}
+
+.chart-bar {
+  height: 30px;
+  margin-bottom: 10px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.chart-design .chart-bar{
+  background: #93cede; /* Old browsers */
+  background: -moz-linear-gradient(left,  #93cede 0%, #75bdd1 41%, #49a5bf 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #93cede 0%,#75bdd1 41%,#49a5bf 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  #93cede 0%,#75bdd1 41%,#49a5bf 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=1 ); /* IE6-9 */
+}
+
+.chart-prod .chart-bar{
+  background: #b4ddb4; /* Old browsers */
+  background: -moz-linear-gradient(left,  #b4ddb4 0%, #83c783 17%, #52b152 33%, #008a00 67%, #005700 83%, #002400 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', endColorstr='#002400',GradientType=1 ); /* IE6-9 */
+}
+
+.chart-dev .chart-bar{
+  background: #ffa84c; /* Old browsers */
+  background: -moz-linear-gradient(left,  #ffa84c 0%, #ff7b0d 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #ffa84c 0%,#ff7b0d 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  #ffa84c 0%,#ff7b0d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=1 ); /* IE6-9 */
+}
+
+.chart-bar[data-skill='30'] {
+  width: 30%;
+}
+.chart-bar[data-skill='35'] {
+  width: 35%;
+}
+.chart-bar[data-skill='40'] {
+  width: 40%;
+}
+.chart-bar[data-skill='45'] {
+  width: 45%;
+}
+.chart-bar[data-skill='50'] {
+  width: 50%;
+}
+.chart-bar[data-skill='55'] {
+  width: 55%;
+}
+.chart-bar[data-skill='60'] {
+  width: 60%;
+}
+.chart-bar[data-skill='65'] {
+  width: 65%;
+}
+.chart-bar[data-skill='70'] {
+  width: 70%;
+}
+.chart-bar[data-skill='75'] {
+  width: 75%;
+}
+.chart-bar[data-skill='80'] {
+  width: 80%;
+}
+.chart-bar[data-skill='85'] {
+  width: 85%;
+}
+.chart-bar[data-skill='90'] {
+  width: 90%;
+}
+.chart-bar[data-skill='95'] {
+  width: 95%;
+}
+
+	.chart-label {
+	  padding-left: 10px;
+	  white-space: nowrap;
+	  color: white;
+	}
+
+@media only screen and (min-width:1170px){
+	.timeline-panel.is-hidden {
+	    visibility: hidden;
+	 }
+
+	.timeline-panel.bounce-in {
+	    visibility: visible;
+	    -webkit-animation: cd-bounce-2 0.6s;
+	    -moz-animation: cd-bounce-2 0.6s;
+	    animation: cd-bounce-2 0.6s;
+	  }
+
+	 /* inverse bounce effect on even content blocks */
+	 .timeline-inverse .timeline-panel.bounce-in {
+	    -webkit-animation: cd-bounce-2-inverse 0.6s;
+	    -moz-animation: cd-bounce-2-inverse 0.6s;
+	    animation: cd-bounce-2-inverse 0.6s;
+	  }
+
+	 .timeline-badge.is-hidden {
+	  visibility: hidden;
+	}
+	 .timeline-badge.bounce-in {
+	  visibility: visible;
+	  animation: cd-bounce-1 0.6s;
+	}
+	 
+	@-webkit-keyframes cd-bounce-1 {
+	  0% {
+	    opacity: 0;
+	    -webkit-transform: scale(0.5);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -webkit-transform: scale(1.2);
+	  }
+
+	  100% {
+	    -webkit-transform: scale(1);
+	  }
+	}
+	@-moz-keyframes cd-bounce-1 {
+	  0% {
+	    opacity: 0;
+	    -moz-transform: scale(0.5);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -moz-transform: scale(1.2);
+	  }
+
+	  100% {
+	    -moz-transform: scale(1);
+	  }
+	}
+	@keyframes cd-bounce-1 {
+	  0% {
+	    opacity: 0;
+	    -webkit-transform: scale(0.5);
+	    -moz-transform: scale(0.5);
+	    -ms-transform: scale(0.5);
+	    -o-transform: scale(0.5);
+	    transform: scale(0.5);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -webkit-transform: scale(1.2);
+	    -moz-transform: scale(1.2);
+	    -ms-transform: scale(1.2);
+	    -o-transform: scale(1.2);
+	    transform: scale(1.2);
+	  }
+
+	  100% {
+	    -webkit-transform: scale(1);
+	    -moz-transform: scale(1);
+	    -ms-transform: scale(1);
+	    -o-transform: scale(1);
+	    transform: scale(1);
+	  }
+	}
+	@keyframes cd-bounce-2 {
+	  0% {
+	    opacity: 0;
+	    -webkit-transform: translateX(-100px);
+	    -moz-transform: translateX(-100px);
+	    -ms-transform: translateX(-100px);
+	    -o-transform: translateX(-100px);
+	    transform: translateX(-100px);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -webkit-transform: translateX(20px);
+	    -moz-transform: translateX(20px);
+	    -ms-transform: translateX(20px);
+	    -o-transform: translateX(20px);
+	    transform: translateX(20px);
+	  }
+
+	  100% {
+	    -webkit-transform: translateX(0);
+	    -moz-transform: translateX(0);
+	    -ms-transform: translateX(0);
+	    -o-transform: translateX(0);
+	    transform: translateX(0);
+	  }
+	}
+	@-webkit-keyframes cd-bounce-2-inverse {
+	  0% {
+	    opacity: 0;
+	    -webkit-transform: translateX(100px);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -webkit-transform: translateX(-20px);
+	  }
+
+	  100% {
+	    -webkit-transform: translateX(0);
+	  }
+	}
+	@-moz-keyframes cd-bounce-2-inverse {
+	  0% {
+	    opacity: 0;
+	    -moz-transform: translateX(100px);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -moz-transform: translateX(-20px);
+	  }
+
+	  100% {
+	    -moz-transform: translateX(0);
+	  }
+	}
+	@keyframes cd-bounce-2-inverse {
+	  0% {
+	    opacity: 0;
+	    -webkit-transform: translateX(100px);
+	    -moz-transform: translateX(100px);
+	    -ms-transform: translateX(100px);
+	    -o-transform: translateX(100px);
+	    transform: translateX(100px);
+	  }
+
+	  60% {
+	    opacity: 1;
+	    -webkit-transform: translateX(-20px);
+	    -moz-transform: translateX(-20px);
+	    -ms-transform: translateX(-20px);
+	    -o-transform: translateX(-20px);
+	    transform: translateX(-20px);
+	  }
+
+	  100% {
+	    -webkit-transform: translateX(0);
+	    -moz-transform: translateX(0);
+	    -ms-transform: translateX(0);
+	    -o-transform: translateX(0);
+	    transform: translateX(0);
+	  }
+	}
+
+	.chart-bar.is-hidden {
+      visibility: hidden;
+   }
+
+	.chart-bar.slidein
+	{
+	  -webkit-animation: 1s anim-lightspeed-in ease forwards;
+	      -moz-animation: 1s anim-lightspeed-in ease forwards;
+	      animation: 1s anim-lightspeed-in ease forwards;
+	}
+
+	@keyframes anim-lightspeed-in {
+	  0% {
+	    transform: translateX(-200%);
+	    opacity: 1;
+	  }
+	  100% {
+	    transform: translateX(0);
+	    opacity: 1;
+	  }
+	}
 }
 
 @media (max-width: 767px) {
@@ -2492,6 +2904,16 @@ body, html{
 				background-image: url("../../images/truth.jpg");
 			}
 
+			#main > section#tnt{
+				background-image: url("../../images/project/tnt_cover.jpg");
+				background-size: contain;
+				background-position: center;
+			}
+
+			#main > section#sims{
+				background-image: url("../../images/project/alice.jpg");
+			}
+
 /* Wide */
 
 	@media screen and (min-width: 961px) and (max-width: 1880px) {
@@ -2601,6 +3023,12 @@ body, html{
 
 			#main {
 				margin-left: 20%;
+			}
+
+			/*Image Overlay*/
+			.hovereffect p {
+				line-height: 20px;
+				padding:5px;
 			}
 
 	}
@@ -2793,6 +3221,11 @@ body, html{
 					padding: 4em 0;
 				}
 
+			.hovereffect p {
+				line-height: 20px;
+				padding: 5px
+			}
+
 	}
 
 /* Mobile */
@@ -2849,5 +3282,12 @@ body, html{
 				#footer .copyright li:first-child {
 					margin-top: 0;
 				}
+
+			.hovereffect p {
+				line-height: 1.75em;
+				padding: 10px
+			}
+
+		
 
 	}
